display thumbnail icon when thumbnail not found in grid view, fix file icon vertical align

--- a/public/css/lfm.css
+++ b/public/css/lfm.css
@@ -56,3 +56,27 @@ html, body {
 .hidden {
     display: none;
 }
+
+.square {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.icon-container {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin: 0 auto;
+}
+.icon-container:before {
+  content: '';
+  display: inline-block;
+  vertical-align: middle ;
+  height: 100%;
+}
+.icon-container > i {
+  display: inline-block;
+  vertical-align: middle;
+}
